updated prof. activities

--- a/Bio.html
+++ b/Bio.html
@@ -38,14 +38,14 @@
 
 <span class="textStyle">
 Sudipta Sinha is a researcher at Microsoft Research Redmond. His research interests lie in computer vision, robotics and computer graphics. He works on various topics in 3D vision for 3D scene reconstruction from images and video -- structure from motion, visual odometry, stereo matching, optical flow, multi-view stereo, image-based localization, object detection and pose estimation. He is interested in applications such as 3D scanning, augmented reality (AR) and UAV-based aerial photogrammetry and 3D scanning. <br><br>
-He received his M.S. and Ph.D. from the University of North Carolina at Chapel Hill in 2005 and 2009 respectively. As a member of the UNC-CH team, he received the best demo award at CVPR 2007 for one of the first scalable, real-time, vision-based urban 3D reconstruction systems. He has served/will serve as an area chair for 3DV 2016, ICCV 2017 and 3DV 2018, was a program co-chair for 3DV 2017 and serves as an associate editor for the Computer Vision and Image Understanding (CVIU) Journal.  
+He received his M.S. and Ph.D. from the University of North Carolina at Chapel Hill in 2005 and 2009 respectively. As a member of the UNC-CH team, he received the best demo award at CVPR 2007 for one of the first scalable, real-time, vision-based urban 3D reconstruction systems. He has served or will serve as an area chair for 3DV 2016, ICCV 2017, 3DV 2018 and 3DV 2019, was a program co-chair for 3DV 2017 and serves as an area editor for the Computer Vision and Image Understanding (CVIU) Journal.  
 </span>
 </div>
 
 
 <div id="footer-box">
 <hr>
-Last updated: April 19, 2018
+Last updated: May 20, 2019
 </div>
 
 </body></html>
