--- a/Bio.html
+++ b/Bio.html
@@ -37,7 +37,7 @@
 -->
 
 <span class="textStyle">
-Sudipta Sinha is a principal researcher working on HoloLens and Mixed Reality at Microsoft. His research interests lie in computer vision, robotics and machine learning. He works on 3D computer vision problems related to 3D scene reconstruction from images and video (structure from motion, visual odometry, stereo matching, optical flow, multi-view stereo, image-based localization, object detection and pose estimation) which enable applications such as 3D scanning, augmented reality (AR) and UAV-based aerial photogrammetry. <br><br>
+Sudipta Sinha is a principal researcher working on Mixed Reality and AI in the Cloud and AI group at Microsoft. His research interests lie in computer vision, robotics and machine learning. He works on 3D computer vision problems related to 3D scene reconstruction from images and video (structure from motion, visual odometry, stereo matching, optical flow, multi-view stereo, image-based localization, object detection and pose estimation) which enable applications such as 3D scanning, augmented reality (AR) and UAV-based aerial photogrammetry. <br><br>
 He received his M.S. and Ph.D. from the University of North Carolina at Chapel Hill in 2005 and 2009 respectively. As a member of the UNC Chapel Hill team, he received the best demo award at CVPR 2007 for one of the first scalable, real-time, vision-based urban 3D reconstruction systems. He has served or will serve as an area chair for 3DV 2016, ICCV 2017, 3DV 2018 and 3DV 2019, was a program co-chair for 3DV 2017 and serves as an area editor for the Computer Vision and Image Understanding (CVIU) Journal.
 </span>
 </div>
