--- a/Bio.html
+++ b/Bio.html
@@ -37,9 +37,9 @@
 -->
 
 <span class="textStyle">
-Sudipta Sinha is a Staff Software Engineer at Stack AV working on developing autonomous driving technologies for self-driving trucks since December 2024.<br>
+Sudipta Sinha is a Staff Software Engineer at Stack AV working on developing autonomous driving technologies for self-driving trucks since December 2024.<br><br>
 
-Previously, Sudipta was a principal researcher at Microsoft in the Mixed Reality division where he worked on real-time visual-inertial tracking for Microsoft HoloLens and cloud-based systems for spatial mapping and visual localization. Prior to that he was at Microsoft Research conducting research in computer vision, robotics, and machine learning, on topics in image-based modeling and 3D scene reconstruction, such as structure from motion, visual odometry, stereo, optical flow, visual localization, object detection and pose estimation and applications in 3D computational photography, augmented reality (AR), and aerial photogrammetry.<br>
+Previously, Sudipta was a principal researcher at Microsoft in the Mixed Reality division where he worked on real-time visual-inertial tracking for Microsoft HoloLens and cloud-based systems for spatial mapping and visual localization. Prior to that he was at Microsoft Research conducting research in computer vision, robotics, and machine learning, on topics in image-based modeling and 3D scene reconstruction, such as structure from motion, visual odometry, stereo, optical flow, visual localization, object detection and pose estimation and applications in 3D computational photography, augmented reality (AR), and aerial photogrammetry.<br><br>
 
 He received his M.S. and Ph.D. in Computer Science from the University of North Carolina at Chapel Hill in 2005 and 2009 respectively. As a member of the UNC Chapel Hill team, he received the best demo award at CVPR 2007 for one of the first real-time, vision-based urban 3D reconstruction systems. He has served as an area chair for 3DV 2016, ICCV 2017, 3DV 2018, 3DV 2019, 3DV 2020 and 3DV 2022 and was a program co-chair for 3DV 2017. He served as an area editor for the Computer Vision and Image Understanding (CVIU) Journal from 2017 to 2023.
 </span>
